--- a/apps/vst/res/anim/anim_leo_blinkonly.xml
+++ b/apps/vst/res/anim/anim_leo_blinkonly.xml
@@ -3,9 +3,9 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item android:drawable="@drawable/anim_leo_justblink0001" android:duration="20"/>
-<!--     <item android:drawable="@drawable/anim_leo_justblink0002" android:duration="20"/>
+	<item android:drawable="@drawable/anim_leo_justblink0002" android:duration="20"/>
     <item android:drawable="@drawable/anim_leo_justblink0003" android:duration="20"/>
     <item android:drawable="@drawable/anim_leo_justblink0004" android:duration="20"/>
-    <item android:drawable="@drawable/anim_leo_justblink0005" android:duration="800"/> -->
+    <item android:drawable="@drawable/anim_leo_justblink0005" android:duration="3000"/>
 
 </animation-list>
