--- a/apps/vst/res/layout/start.xml
+++ b/apps/vst/res/layout/start.xml
@@ -29,9 +29,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_marginBottom="-20dp"
         android:cropToPadding="true"
         android:scaleType="center"
-        android:src="@drawable/img_obj_leo" />
+        android:background="@drawable/anim_leo_justblink0005" />
 
     <TextView
         android:id="@+id/txt_phoneme"
