--- a/apps/vst/res/layout/tmp_tutorial.xml
+++ b/apps/vst/res/layout/tmp_tutorial.xml
@@ -26,32 +26,69 @@
         <ImageButton
             android:id="@+id/buttonSkip"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="700dp"
             android:background="@android:color/transparent"
             android:padding="20dp"
+            android:paddingTop="50dp"
             android:src="@drawable/btn_skip" />
+
     </LinearLayout>
 
     <ImageButton
         android:id="@+id/buttonPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minHeight="170dp"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="100dp"
         android:layout_below="@+id/linearLayout1"
-        android:layout_marginLeft="129dp"
         android:layout_marginTop="136dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/anim_btn_play0001" />
+        android:visibility="visible"
+        android:background="@drawable/anim_btn_play0001"
+        />
 
     <ImageButton
         android:id="@+id/buttonRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minHeight="170dp"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/buttonPlay"
-        android:layout_marginRight="106dp"
+        android:layout_marginRight="100dp"
+       	android:visibility="visible"
+        android:background="@drawable/anim_btn_speak0001"
+         />
+
+    <ImageButton
+        android:id="@+id/buttonLeo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-30dp"
+        android:visibility="invisible"
         android:background="@android:color/transparent"
-        android:src="@drawable/anim_btn_speak0001" />
+        android:src="@drawable/anim_leo_justblink0001" />
+
+    <ImageButton
+        android:id="@+id/btn_game3_lemon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/img_obj_lemon"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/txt_game_3_lemon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:layout_centerHorizontal="true"
+        android:text="Lemon"
+        android:textColor="#fff"
+        android:textSize="60sp" />
 
 </RelativeLayout>
