--- a/apps/vst/res/layout/debug_speech.xml
+++ b/apps/vst/res/layout/debug_speech.xml
@@ -16,7 +16,7 @@
         android:layout_weight="1" />
 
     <Button
-        android:id="@+id/Button01"
+        android:id="@+id/buttonGoToSettings"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
