--- a/apps/vst/res/layout/phoneme_game.xml
+++ b/apps/vst/res/layout/phoneme_game.xml
@@ -36,57 +36,39 @@
     </LinearLayout>
 
     <ImageButton
-        android:id="@+id/buttonLeo"
+        android:id="@+id/buttonStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentLeft="true"
+        android:src="@drawable/anim_leo_justblink0001_1"
+        android:background="@drawable/anim_leo_justblink0001_1"
         android:translationY="20dp"
-        android:visibility="visible"
-        android:background="@drawable/anim_leo_justblink0001" />
-
-    <ImageButton
-        android:id="@+id/btn_game3_lemon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/img_obj_lemon"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
     <TextView
-        android:id="@+id/txt_game_3_lemon"
+        android:id="@+id/txt_game1_l"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:layout_centerHorizontal="true"
-        android:text="Lemon"
-        android:visibility="invisible" 
+        android:layout_alignLeft="@+id/buttonRecord"
+        android:layout_alignTop="@+id/buttonRecord"
+        android:layout_marginTop="63dp"
+        android:text="LLLL..."
         android:textColor="#fff"
-        android:textSize="60sp" />
+        android:textSize="60sp"
+        android:visibility="visible" />
 
     <ImageButton
         android:id="@+id/buttonRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/txt_game_3_lemon"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="80dp"
-        android:layout_toRightOf="@+id/buttonLeo"
+        android:layout_alignTop="@+id/buttonStart"
+        android:layout_marginLeft="201dp"
+        android:layout_marginTop="54dp"
+        android:layout_toRightOf="@+id/buttonStart"
         android:background="@drawable/anim_btn_speak0001"
-        android:minHeight="170dp"
-        android:visibility="visible" />
-
-    <ImageButton
-        android:id="@+id/buttonPlay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/buttonRecord"
-        android:layout_marginRight="80dp"
-        android:layout_toLeftOf="@+id/buttonLeo"
-        android:background="@drawable/anim_btn_play0001"
-        android:minHeight="170dp"
-        android:visibility="visible" />
+        android:minHeight="200dp"
+        android:minWidth="200dp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
