--- a/apps/vst/res/layout/word_game.xml
+++ b/apps/vst/res/layout/word_game.xml
@@ -42,7 +42,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:translationY="20dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:background="@drawable/anim_leo_justblink0001" />
 
     <ImageButton
@@ -52,7 +52,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:background="@drawable/img_obj_lemon"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/txt_game_3_lemon"
@@ -62,7 +62,7 @@
         android:layout_marginBottom="30dp"
         android:layout_centerHorizontal="true"
         android:text="Lemon"
-        android:visibility="invisible" 
+        android:visibility="visible" 
         android:textColor="#fff"
         android:textSize="60sp" />
 
