--- a/apps/vst/res/layout/word_game.xml
+++ b/apps/vst/res/layout/word_game.xml
@@ -32,7 +32,6 @@
             android:padding="20dp"
             android:paddingTop="50dp"
             android:src="@drawable/btn_skip" />
-
     </LinearLayout>
 
     <ImageButton
@@ -41,12 +40,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/anim_leo_justblink0001"
         android:translationY="20dp"
-        android:visibility="invisible"
-        android:background="@drawable/anim_leo_justblink0001" />
+        android:visibility="invisible" />
 
     <ImageButton
-        android:id="@+id/btn_game3_lemon"
+        android:id="@+id/btn_game3_obj"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -54,39 +53,38 @@
         android:background="@drawable/img_obj_lemon"
         android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/txt_game_3_lemon"
+    <ImageButton
+        android:id="@+id/buttonPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:layout_centerHorizontal="true"
-        android:text="Lemon"
-        android:visibility="visible" 
-        android:textColor="#fff"
-        android:textSize="60sp" />
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="78dp"
+        android:background="@drawable/anim_btn_play0001"
+        android:minHeight="170dp"
+        android:visibility="invisible" />
 
     <ImageButton
         android:id="@+id/buttonRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/txt_game_3_lemon"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="80dp"
-        android:layout_toRightOf="@+id/buttonLeo"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="69dp"
         android:background="@drawable/anim_btn_speak0001"
         android:minHeight="170dp"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
-    <ImageButton
-        android:id="@+id/buttonPlay"
+    <TextView
+        android:id="@+id/txt_game_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/buttonRecord"
-        android:layout_marginRight="80dp"
-        android:layout_toLeftOf="@+id/buttonLeo"
-        android:background="@drawable/anim_btn_play0001"
-        android:minHeight="170dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="34dp"
+        android:text="Lemon"
+        android:textColor="#fff"
+        android:textSize="60sp"
         android:visibility="visible" />
 
 </RelativeLayout>
