--- a/apps/vst/res/layout/syllable_game.xml
+++ b/apps/vst/res/layout/syllable_game.xml
@@ -70,5 +70,18 @@
         android:minHeight="200dp"
         android:minWidth="200dp"
         android:visibility="invisible" />
+    
+    <ImageButton
+        android:id="@+id/buttonPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/buttonStart"
+        android:layout_marginLeft="201dp"
+        android:layout_marginTop="54dp"
+        android:layout_toRightOf="@+id/buttonStart"
+        android:background="@drawable/anim_btn_play0001"
+        android:minHeight="200dp"
+        android:minWidth="200dp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
