--- a/apps/vst/res/layout/syllable_game.xml
+++ b/apps/vst/res/layout/syllable_game.xml
@@ -47,7 +47,7 @@
         android:visibility="visible" />
 
     <TextView
-        android:id="@+id/txt_game1_l"
+        android:id="@+id/txt_game1_syllable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/buttonRecord"
