--- a/apps/vst/res/layout/syllable_game.xml
+++ b/apps/vst/res/layout/syllable_game.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/game_layout_syllable"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_blue_wash" >
+    android:background="@drawable/bg_blue_wash"
+    android:textAlignment="center" >
 
     <LinearLayout
         android:id="@+id/menuLayout"
@@ -46,18 +48,6 @@
         android:translationY="20dp"
         android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/txt_game1_syllable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonRecord"
-        android:layout_alignTop="@+id/buttonRecord"
-        android:layout_marginTop="63dp"
-        android:text="La"
-        android:textColor="#fff"
-        android:textSize="60sp"
-        android:visibility="visible" />
-
     <ImageButton
         android:id="@+id/buttonRecord"
         android:layout_width="wrap_content"
@@ -82,6 +72,29 @@
         android:background="@drawable/anim_btn_play0001"
         android:minHeight="200dp"
         android:minWidth="200dp"
+        android:textAlignment="center"
         android:visibility="invisible" />
+
+    <ImageView
+        android:id="@+id/imageViewSpeak"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/menuLayout"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/anim_btn_speak0001" />
+
+    <TextView
+        android:id="@+id/txt_game1_syllable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageViewSpeak"
+        android:layout_marginTop="33dp"
+        android:layout_toRightOf="@+id/buttonStart"
+        android:text="Tap Leo to begin..."
+        android:textColor="#fff"
+        android:textSize="60sp"
+        android:visibility="visible" />
 
 </RelativeLayout>
