- Cleaned up the tutorial video and made it skippable. - Fixed some fatal bugs that popped up in the tutorial. - Reworked animations to be consistent with the state model used by the player and recorder. - Integrated tutorial video into the tutorial activity.

--- a/apps/vst/res/layout/tutorial.xml
+++ b/apps/vst/res/layout/tutorial.xml
@@ -69,4 +69,15 @@
         android:minHeight="170dp"
         android:visibility="visible" />
 
+    <VideoView
+        android:id="@+id/tutorialVideo"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+       	android:layout_alignParentRight="true"
+       	android:layout_alignParentBottom="true"
+       	android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
 </RelativeLayout>
