--- a/apps/vst/res/layout/phoneme_game.xml
+++ b/apps/vst/res/layout/phoneme_game.xml
@@ -36,17 +36,6 @@
 
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/buttonStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:src="@drawable/anim_leo_justblink0001_1"
-        android:background="@drawable/anim_leo_justblink0001_1"
-        android:translationY="20dp"
-        android:visibility="visible" />
-
     <TextView
         android:id="@+id/txt_game1_l"
         android:layout_width="wrap_content"
@@ -57,15 +46,34 @@
         android:text="LLLL..."
         android:textColor="#fff"
         android:textSize="60sp"
-        android:visibility="visible" />
+        android:visibility="invisible" />
+
+    <ImageButton
+        android:id="@+id/buttonPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/buttonRecord"
+        android:layout_marginRight="51dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/anim_btn_play0001"
+        android:visibility="invisible" />
+
+    <ImageButton
+        android:id="@+id/buttonStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/anim_leo_hand_to_ear0001"
+        android:visibility="invisible" />
 
     <ImageButton
         android:id="@+id/buttonRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/buttonStart"
-        android:layout_marginLeft="201dp"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="45dp"
         android:layout_toRightOf="@+id/buttonStart"
         android:background="@drawable/anim_btn_speak0001"
         android:minHeight="200dp"
