--- a/apps/vst/res/layout/start.xml
+++ b/apps/vst/res/layout/start.xml
@@ -4,16 +4,6 @@
     android:layout_height="wrap_content"
     android:background="@drawable/anim_splash0059" >
 
-    <ImageView
-        android:id="@+id/leo_fade_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/anim_leo_justblink0005"
-        android:scaleType="center"
-        android:translationY="20dp" />
-
     <TextView
         android:id="@+id/txt_friends"
         android:layout_width="wrap_content"
@@ -52,5 +42,15 @@
         android:background="@drawable/btn_start"
         android:contentDescription="@string/start_button"
         android:visibility="visible" />
+
+    <ImageButton
+        android:id="@+id/leo_fade_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/txt_phoneme"
+        android:background="@drawable/anim_leo_justblink0001"
+        android:scaleType="center"
+        android:translationY="20dp" />
 
 </RelativeLayout>
