--- a/apps/vst/res/layout/syllable_game.xml
+++ b/apps/vst/res/layout/syllable_game.xml
@@ -48,18 +48,15 @@
         android:translationY="20dp"
         android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/txt_game1_syllable"
-        android:layout_width="400dp"
+    <ImageButton
+        android:id="@+id/buttonPlay"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/buttonSpeak"
-        android:layout_marginLeft="84dp"
-        android:layout_marginTop="57dp"
-        android:layout_toRightOf="@+id/buttonStart"
-        android:gravity="center"
-        android:text="Tap Leo to begin..."
-        android:textColor="#fff"
-        android:textSize="40sp"
+        android:layout_alignLeft="@+id/buttonSpeak"
+        android:layout_alignTop="@+id/buttonStart"
+        android:layout_marginTop="90dp"
+        android:background="@drawable/anim_btn_play0001"
+        android:textAlignment="center"
         android:visibility="visible" />
 
     <ImageButton
@@ -67,19 +64,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/buttonPlay"
-        android:layout_alignRight="@+id/txt_game1_syllable"
-        android:layout_marginRight="120dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="24dp"
         android:background="@drawable/anim_btn_speak0001"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
-    <ImageButton
-        android:id="@+id/buttonPlay"
+    <TextView
+        android:id="@+id/txt_game1_syllable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/buttonSpeak"
-        android:layout_alignTop="@+id/buttonStart"
-        android:background="@drawable/anim_btn_play0001"
-        android:textAlignment="center"
+        android:layout_alignTop="@+id/buttonPlay"
+        android:layout_marginLeft="33dp"
+        android:layout_marginTop="33dp"
+        android:layout_toRightOf="@+id/buttonStart"
+        android:text="Tap Leo to begin..."
+        android:textColor="#fff"
+        android:textSize="40sp"
         android:visibility="visible" />
 
 </RelativeLayout>
