--- a/apps/vst/res/layout/practice_game.xml
+++ b/apps/vst/res/layout/practice_game.xml
@@ -15,7 +15,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
-        android:id="@+id/buttonStart"
+        android:id="@+id/buttonStartWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
