--- a/apps/vst/res/layout/syllable_game.xml
+++ b/apps/vst/res/layout/syllable_game.xml
@@ -3,8 +3,7 @@
     android:id="@+id/game_layout_syllable"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_blue_wash"
-    android:textAlignment="center" >
+    android:background="@drawable/bg_blue_wash" >
 
     <LinearLayout
         android:id="@+id/menuLayout"
@@ -34,51 +33,37 @@
             android:padding="20dp"
             android:paddingTop="50dp"
             android:src="@drawable/btn_skip" />
-
     </LinearLayout>
 
     <ImageButton
-        android:id="@+id/buttonStart"
+        android:id="@+id/buttonStartWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/leo_animation0001"
         android:background="@drawable/leo_animation0001"
         android:visibility="visible" />
 
     <TextView
-        android:id="@+id/txt_game1_syllable"
-        android:layout_width="400dp"
+        android:id="@+id/txt_label_syllable"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/buttonSpeak"
-        android:layout_alignTop="@+id/buttonSpeak"
-        android:layout_marginRight="107dp"
-        android:layout_marginTop="34dp"
-        android:gravity="center"
-        android:text="Tap Leo to begin..."
+        android:layout_alignLeft="@+id/imageViewPrompt"
+        android:layout_below="@+id/imageViewPrompt"
+        android:layout_marginTop="57dp"
+        android:text="Tap Leo To Start..."
+        android:textAlignment="center"
         android:textColor="#fff"
         android:textSize="40sp"
         android:visibility="visible" />
 
-    <ImageButton
-        android:id="@+id/buttonPlay"
+    <ImageView
+        android:id="@+id/imageViewPrompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonSpeak"
-        android:layout_alignTop="@+id/buttonStart"
-        android:background="@drawable/anim_btn_play0001"
-        android:textAlignment="center"
-        android:visibility="visible" />
-
-    <ImageButton
-        android:id="@+id/buttonSpeak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/buttonPlay"
-        android:layout_marginRight="18dp"
-        android:background="@drawable/anim_btn_speak0001"
-        android:visibility="visible" />
+        android:layout_alignTop="@+id/buttonStartWord"
+        android:layout_marginTop="42dp"
+        android:layout_toRightOf="@+id/buttonStartWord"
+        android:background="@drawable/anim_btn_play0001" />
 
 </RelativeLayout>
