--- a/apps/vst/res/layout/word_game.xml
+++ b/apps/vst/res/layout/word_game.xml
@@ -45,12 +45,21 @@
         android:translationY="20dp"
         android:visibility="visible" />
 
+    <ImageView
+        android:id="@+id/imageViewPrompt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/buttonStartWord"
+        android:background="@drawable/anim_btn_play0001" />
+
     <ImageButton
         android:id="@+id/btn_game3_obj"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/buttonStartWord"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="31dp"
         android:background="@drawable/img_obj_lemon"
         android:visibility="visible" />
 
@@ -58,20 +67,12 @@
         android:id="@+id/txt_game_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/btn_game3_obj"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="34dp"
+        android:layout_marginTop="25dp"
         android:text="Lemon"
         android:textColor="#fff"
-        android:textSize="60sp"
+        android:textSize="50sp"
         android:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/imageViewPrompt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/txt_game_3"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/anim_btn_play0001" />
 
 </RelativeLayout>
