Multiple bug fixes and improvements, including:  - Issue 7: Fixed small stars and their animations  - Issue 6: Improved speech recognition in phoneme game  - Issue 19: Prompt used in all places in feeding game  - Issue 10: Tutorial prompts working only when they are supposed to  - Issue 23: Reset the recogniser more thoroughly and abstractly  - Issue 16: Word game prompt showing every time  - Issue 13: Recognition breaking after a failed attemp

--- a/apps/vst/res/layout/phoneme_select.xml
+++ b/apps/vst/res/layout/phoneme_select.xml
@@ -128,9 +128,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/linearLayout2"
-        android:layout_marginLeft="67dp"
-        android:layout_marginTop="62dp"
-        android:background="@anim/anim_star_big"
+        android:layout_marginLeft="132dp"
+        android:layout_marginTop="139dp"
+        android:background="@anim/anim_star_small"
         android:scaleType="fitCenter" />
 
 </RelativeLayout>
